MSPSDS-805: Force scroll bar everywhere to avoid side-jumps when switching between tabs

--- a/web/app/assets/stylesheets/main.scss
+++ b/web/app/assets/stylesheets/main.scss
@@ -18,6 +18,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 @media print {
   .no-print {
     display: none !important; // sass-lint:disable-line no-important
